<resources>
    <string name="app_name">EmoD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summarize1">오늘 길동이는 어린이집에 다녀왔구나!</string>
    <string name="summarize2">어린이집에서 블럭놀이를 하면서 길동이가 좋아하는 버스랑 자동차를 만들었어. 정말 멋있었겠다!</string>
    <string name="summarize3">하지만, 열심히 만든 버스랑 자동차 블럭을 지나가던 친구가 실수로 넘어뜨렸지?</string>
    <string name="sad_emotion">은/는 오늘 그런 일이 있어서 슬펐겠구나.그럼 이제 슬플 땐 어떻게 표현해야하는지 알아볼까?</string>
    <string name="happy_emotion">은/는 오늘 그런 일이 있어서 기뻤겠구나. 그럼 이제 기쁠 땐 어떻게 표현해야하는지 알아볼까?</string>
    <string name="angry_emotion">은/는 오늘 그런 일이 있어서 화가 났겠구나. 그럼 이제 화가 날 땐 어떻게 표현해야하는지 알아볼까?</string>
    <string name="summarize4">이/가 열심히 만든 버스랑 자동차가 망가져서, 길동이는 엄청 속상했을 거야.</string>

    <string name="onboarding_title_1">우리 아이 맞춤형 감정 학습</string>
    <string name="onboarding_title_2">이모디와 함께 해요!</string>

    <string name="emod_benefit_title">이모디, 이런 점이 좋아요!</string>
    <string name="emod_benefit_1">AI가 우리 아이 맞춤\n감정 커리큘럼을\n설계해줘요.</string>
    <string name="emod_benefit_2">매일의 대화를 통해\n어휘력과 감정 표현\n습관이 자라나요.</string>
    <string name="emod_benefit_3">감정 리포트로\n아이의 변화 과정을\n한눈에 볼 수 있어요.</string>

    <string name="to_next">다음으로</string>
    <string name="to_home">홈으로</string>

    <string name="placeholder_text">EMOD</string>

    <string-array name="signup_step">
        <item>아이와 함께 할\n캐릭터를 골라주세요.</item>
        <item>아이의 정보를\n입력해주세요.</item>
        <item>맞춤 커리큘럼을 위한\n체크리스트를 작성해주세요.</item>
        <item>아이의 학습 환경을\n모두 선택해주세요.</item>
    </string-array>

    <string-array name="signup_step_3_questions">
        <item>Q1. 아이는 자신의 감정을 말로 표현할 수 있나요?</item>
        <item>Q2. 아이는 대화에 어느 정도 집중할 수 있나요?</item>
    </string-array>

    <string-array name="signup_step_3_q1_answers">
        <item>거의 표현하지 못해요</item>
        <item>짧은 단어나 문장으로 감정을 설명해요</item>
        <item>상황에 맞추어 감정을 자연스럽게 표현해요</item>
    </string-array>

    <string-array name="signup_step_3_q2_answers">
        <item>3분 이내에 자주 산만해져요</item>
        <item>5분 정도는 비교적 집중해요</item>
        <item>10분 이상 대화 흐름을 끝까지 따라요</item>
    </string-array>

    <string name="kindergarten">유치원 / 어린이집</string>
    <string name="school">초등학교</string>
    <string name="building">발달 · 복지센터</string>
    <string name="home">집</string>
    
    <string name="signup_complete_subtitle">우리 아이 정보 등록이 완료되었어요!</string>
    <string name="signup_complete_title1">이모디와 함께, </string>
    <string name="signup_complete_title2">의 마음이 자라나요!</string>

    <string name="parent_password_setting">보호자 페이지 비밀번호 설정</string>
    <string name="parent_password_setting_two">한번 더 입력해주세요</string>
    <string name="parent_password">보호자 페이지 비밀번호 입력</string>

    <string name="diary_title_placeholder_1">기쁜 마음을 느낀 날</string>
    <string name="diary_placeholder_1">건희는 어린이집에서 블럭 놀이를 하였어요.\n블럭으로 건희가 좋아하는 버스와 자동차를 만들었어요.\n버스와 자동차를 완성한 후 기분이 좋았어요.\n그리고 어린이집의 친구들이 예쁘다고 칭찬해 주어서 더 큰 기쁨을 느꼈어요.</string>
    <string name="diary_guide_placeholder_1">집중해서 만든 작품을 칭찬받은 건희는 매우 기뻐하는 상태일 수 있어요.\n다음에도 비슷한 상황이 생긴다면, 아이가 성취감을 더 잘 느낄 수 있도록 긍정적인 감정을 표현하고 유지하는 훈련을 해주세요.</string>

    <string name="diary_title_placeholder_2">화가 난 하루</string>
    <string name="diary_placeholder_2">건희는 어린이집에서 색연필로 그림을 그리고 있었어요.\n건희는 자신이 가장 좋아하는 공룡을 멋지게 색칠했어요.\n그런데 옆에 있던 친구가 장난을 치며 그림 위에 낙서를 했어요.\n건희는 정성껏 그린 그림이 망가져서 화가 났어요.</string>
    <string name="diary_guide_placeholder_2">정성껏 만든 작품을 망가뜨린 상황에서 아이는 큰 분노를 느낄 수 있어요.\n아이가 화를 참지 못하고 소리치거나 손이 나가지 않도록 감정을 다스리는 연습을 해주세요.\n아이가 느낀 화난 감정을 인정해 주고, 차분히 말로 표현할 수 있도록 도와주는 것이 좋아요.</string>

    <string name="recent_diary_content">[아이 이름]은 어린이집에서 블럭 놀이를 하였어요.\n블럭으로 [아이 이름]이가 좋아하는 버스와 자동차를 만들었어요.\n버스와 자동차를 완성한 후 기분이 좋았어요.\n하지만, 어린이집의 친구가 블럭을 망가뜨려서 속상함을 느꼈어요.</string>

</resources>