<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="55dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bold"
            android:textSize="29.33sp"
            android:text="@string/signup_complete_subtitle"
            android:lineHeight="64dp"
            android:letterSpacing="0.06"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/extrabold"
                android:textSize="42.67sp"
                android:text="@string/signup_complete_title1"
                android:lineHeight="64dp"
                android:letterSpacing="0.06"/>
            <Space
                android:layout_width="15dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/extrabold"
                android:textSize="42.67sp"
                android:text="@string/placeholder_text"
                android:lineHeight="64dp"
                android:letterSpacing="0.06"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/extrabold"
                android:textSize="42.67sp"
                android:text="@string/signup_complete_title2"
                android:lineHeight="64dp"
                android:letterSpacing="0.06"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="81.67dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="186.16dp"
                android:layout_height="245.33dp"
                android:src="@drawable/lion_character_4x"
                android:contentDescription="@string/placeholder_text"/>
            <Space
                android:layout_width="13.17dp"
                android:layout_height="0dp"/>
            <ImageView
                android:layout_width="186.16dp"
                android:layout_height="245.33dp"
                android:src="@drawable/lion_character_4x"
                android:contentDescription="@string/placeholder_text"/>
            <Space
                android:layout_width="13.17dp"
                android:layout_height="0dp"/>
            <ImageView
                android:layout_width="186.16dp"
                android:layout_height="245.33dp"
                android:src="@drawable/lion_character_4x"
                android:contentDescription="@string/placeholder_text"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="54.67dp"/>
        <Button
            android:id="@+id/btn_to_home"
            android:layout_width="266.67dp"
            android:layout_height="93.33dp"
            android:backgroundTint="@color/primary_normal"
            style="@style/extrabold"
            android:text="@string/to_home"
            android:textColor="@color/black"
            android:textSize="26.67sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
